force-app/main/default/objects/Problem_Vote__c/Problem_Vote__c.object-meta.xml
<CustomObject>
    <label>Business Idea Vote</label>
    <nameField>
        <displayFormat>PV-{00000000}</displayFormat>
        <label>Business Idea Vote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Idea Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>