force-app/main/default/objects/Problem_Vote__c/fields/Business_Idea__c.field-meta.xml
<CustomField>
    <fullName>Business_Idea__c</fullName>
    <label>Business Idea</label>
    <referenceTo>Problem</referenceTo>
    <relationshipLabel>Business Idea Votes</relationshipLabel>
    <relationshipName>Business_Idea_Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>