force-app/main/default/objects/Problem_Vote__c/fields/Downvote__c.field-meta.xml
<CustomField>
    <fullName>Downvote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downvote</label>
    <type>Checkbox</type>
</CustomField>