force-app/main/default/objects/Problem_Vote__c/fields/Upvote__c.field-meta.xml
<CustomField>
    <fullName>Upvote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upvote</label>
    <type>Checkbox</type>
</CustomField>