force-app/main/default/objects/Problem_Vote__c/fields/Vote_Text__c.field-meta.xml
<CustomField>
    <fullName>Vote_Text__c</fullName>
    <formula>IF(Upvote__c = TRUE, &quot;UP&quot;, &quot;DOWN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vote</label>
    <type>Text</type>
</CustomField>